# cuAlgo

./: .gitignore  CMakeLists.txt  README.md
docs/: CMakeLists.txt  Doxyfile.in
docs/src/: 1_license.dox  2_installation.dox  3_API.dox  3_start.dox  mainpage.dox
examples/: CMakeLists.txt  convolutionMatrix.cu  convolutionReductionMatrix.cu  exclusiveScanVector.cu  generalMatrixMultiplication.cu  generalMatrixVectorMultiplication.cu  generalSparseMatrixVectorMultiplicationCSRAdaptive.cu  generalSparseMatrixVectorMultiplicationCSRVector.cu  generalSparseMatrixVectorMultiplicationELL.cu  reductionMatrix.cu  reductionVector.cu  transpositionMatrix.cu
src/: CMakeLists.txt  checkError.cu  checkError.hpp  convolution1dmatrix.cu  convolution_reduction1dmatrix.cu  convolution_taper_reduction1dmatrix.cu  cuAlgo.hpp  cuAlgoInternal.hpp  exclusiveScan1dvector.cu  gMatMul.cu  gMatVecMul.cu  gSpMatVecMulCSRAdaptive.cu  gSpMatVecMulCSRVector.cu  gSpMatVecMulELL.cu  getRowBlocks.cu  reduction1dmatrix.cu  reduction1dvector.cu  templateShMem.hpp  transposeMatrix.cu  utils.cu  utils.h  utils.hpp
tests/: CMakeLists.txt  test_gMatMul.cu  test_transposeMatrix.cu
